Fix height issue on Chrome for Android

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -19,7 +19,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 
 // Make the view full height (required to automatically grow the map)
 html, body {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
