Create separate pane for units and incidents

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -119,3 +119,11 @@ $highlight-color: yellow;
 .leaflet-popup-content {
   white-space: pre;
 }
+
+.leaflet-units-pane {
+  z-index: 601;
+}
+
+.leaflet-incidents-pane {
+  z-index: 602;
+}
